1.链接改为在新标签页中打开;2.image文件中添加了活动图片

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <h1>Welcome HangZhou</h1>
+                                <h1>Welcome to HangZhou</h1>
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                         <span class="icon"></span>
                         <p>黄金良</p>
                         <p>前端工程师</p>
-                        <p><a href="http://www.shmaur.com" class="btn btn-primary">个人主页</a></p>
+                        <p><a href="http://www.shmaur.com" target="blank" class="btn btn-primary">个人主页</a></p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeInUp">
@@ -180,7 +180,7 @@
                         <span class="icon"></span>
                         <p>李序锴</p>
                         <p>前端工程师</p>
-                        <p><a href="" class="btn btn-primary">个人主页</a></p>
+                        <p><a href="" target="blank" class="btn btn-primary">个人主页</a></p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeInRight">
@@ -188,7 +188,7 @@
                         <span class="icon"></span>
                         <p>姓名</p>
                         <p>前端工程师</p>
-                        <p><a href="" class="btn btn-primary">个人主页</a></p>
+                        <p><a href="" target="blank" class="btn btn-primary">个人主页</a></p>
                     </div>
                 </div>
             </div>
@@ -211,7 +211,7 @@
                         <div class="display-fc animate-box">
                             <div class="col-md-3 col-sm-3">
                                 <div class="fcc-center animate-box" data-animate-effect="fadeInLeft">
-                                    <a href="https://github.com/Jupiter-Lee/FCCHangZhou">
+                                    <a href="https://github.com/FCCHZ/FCCHangZhou" target="blank">
                                         <span class="fcc-icon">
                                         <i class="FCC-github-circled"></i>
                                     </span>
